; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/win32/cmd/extr_batch.c_load_resource.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/win32/cmd/extr_batch.c_load_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Could not find resource %s: %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8**)* @load_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_resource(i8* %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32* @FindResourceA(i32* null, i8* %11, i8* %12)
  store i32* %13, i32** %9, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 (...) @GetLastError()
  %19 = call i32 @ok(i32 %16, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %17, i32 %18)
  %20 = load i32*, i32** %9, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %49

23:                                               ; preds = %3
  %24 = load i32*, i32** %9, align 8
  %25 = call i8* @LoadResource(i32* null, i32* %24)
  store i8* %25, i8** %8, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @SizeofResource(i32* null, i32* %26)
  store i32 %27, i32* %10, align 4
  br label %28

28:                                               ; preds = %42, %23
  %29 = load i32, i32* %10, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %40

31:                                               ; preds = %28
  %32 = load i8*, i8** %8, align 8
  %33 = load i32, i32* %10, align 4
  %34 = sub nsw i32 %33, 1
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8, i8* %32, i64 %35
  %37 = load i8, i8* %36, align 1
  %38 = icmp ne i8 %37, 0
  %39 = xor i1 %38, true
  br label %40

40:                                               ; preds = %31, %28
  %41 = phi i1 [ false, %28 ], [ %39, %31 ]
  br i1 %41, label %42, label %45

42:                                               ; preds = %40
  %43 = load i32, i32* %10, align 4
  %44 = add nsw i32 %43, -1
  store i32 %44, i32* %10, align 4
  br label %28

45:                                               ; preds = %40
  %46 = load i8*, i8** %8, align 8
  %47 = load i8**, i8*** %7, align 8
  store i8* %46, i8** %47, align 8
  %48 = load i32, i32* %10, align 4
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %45, %22
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32* @FindResourceA(i32*, i8*, i8*) #1

declare dso_local i32 @ok(i32, i8*, i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i8* @LoadResource(i32*, i32*) #1

declare dso_local i32 @SizeofResource(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
